--- a/pages/motion/component.mdx
+++ b/pages/motion/component.mdx
@@ -269,7 +269,7 @@ motion(Component, { forwardMotionProps: true })
 
 Motion animates values outside the React render cycle for increased performance.
 
-[Using `MotionValue`s](/api/motion/motionvalue) instead of state to update visual properties will also avoid re-renders.
+[Using `MotionValue`s](/legacy/docs/motion/motionvalue) instead of state to update visual properties will also avoid re-renders.
 
 Where possible, animate just [transform values](#transform) and opacity, as they are GPU-accelerated. This way, you can animate hundreds of layers on modern mobile devices.
 
