--- a/pages/motion/index.mdx
+++ b/pages/motion/index.mdx
@@ -6,6 +6,7 @@ import {
   Header,
   EmbeddedVideo,
   EmbeddedDemo,
+  Callout
 } from "../../components"
 
 export default Template()
@@ -20,6 +21,12 @@ export default Template()
 </span>
 
 </div>
+
+<Callout>
+
+This is legacy documentation, head over to the <a href="https://www.framer.com/docs/">new documentation</a> to see the latest Framer Motion changes.
+
+</Callout>
 
 <Header />
 
@@ -144,7 +151,7 @@ import { motion } from "framer-motion"
 
 `motion` components are the core of the Motion API. There's a `motion` component for every HTML and SVG element. They work exactly the same, with additional props that allow you to declaratively add animations and gestures.
 
-<CTA name="Learn More" link="/api/motion/component" />
+<CTA name="Learn More" link="/legacy/docs/motion/component" />
 
 </div>
 
@@ -158,7 +165,7 @@ import { motion } from "framer-motion"
 
 `motion` components are animated via the flexible `animate` prop. This can accept an object, variant label(s), or a reference to imperative animation controls.
 
-<CTA name="Learn More" link="/api/motion/animation" />
+<CTA name="Learn More" link="/legacy/docs/motion/animation" />
 
 </div>
 
@@ -185,7 +192,7 @@ return (
 
 They also offer some helper props to temporarily animate while a gesture is active.
 
-<CTA name="Learn More" link="/api/motion/gestures" />
+<CTA name="Learn More" link="/legacy/docs/motion/gestures" />
 
 </div>
 
@@ -206,7 +213,7 @@ They also offer some helper props to temporarily animate while a gesture is acti
 
 They're created automatically and used internally by `motion` components. But they can also be created manually and chained together to create performant, declarative effects.
 
-<CTA name="Learn More" link="/api/motion/motionvalue" />
+<CTA name="Learn More" link="/legacy/docs/motion/motionvalue" />
 
 </div>
 
