--- a/pages/navigation.mdx
+++ b/pages/navigation.mdx
@@ -22,7 +22,7 @@ export default Template("Navigation Controls")
 Expressing flows is an important part of the prototyping process, and easy to set up in Framer. Continue reading to learn how to set up your own flows, or create something new for your project.
 
 <Callout>
-  <strong>Note:</strong> The recommended way to navigate from code is to instead add <a href="https://www.framer.com/api/property-controls/#event-handler">an EventHandler property control</a> to a code component.
+  <strong>Note:</strong> The recommended way to navigate from code is to instead add <a href="https://www.framer.com/legacy/docs/property-controls/#event-handler">an EventHandler property control</a> to a code component.
 </Callout>
 
 
@@ -217,7 +217,7 @@ navigation.customTransition(<Component />, {
 
 <h3>animation: <span style={{ color: "#808080" }}>Transition</span></h3>
 
-[Animation](/api/animation/) options that set the transition properties for the animation.
+[Animation](/legacy/docs/animation/) options that set the transition properties for the animation.
 
 ```jsx
 // Only supported in (Deprecated) Framer Desktop
