--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -1,4 +1,4 @@
-<!-- 👋 Editing this file? Need help? → https://github.com/framer/api-docs/blob/master/CONTRIBUTING.md -->
+<!-- 👋 Editing this file? Need help? → https://github.com/framer/legacy/docs-docs/blob/master/CONTRIBUTING.md -->
 
 import {
   SliderComplete,
@@ -78,7 +78,7 @@ We’ve prepared starter files for CodeSandbox and Framer with React and the Fra
 
 <Button
   name="Framer Starter File"
-  link="https://misc.framerstatic.com/api/tutorial-start.framerx"
+  link="https://misc.framerstatic.com/legacy/docs/tutorial-start.framerx"
 />
 
 <br /><br />
@@ -126,7 +126,7 @@ export function App() {
     >
       <Frame
         center
-        image={"https://misc.framerstatic.com/api/logo.jpg"}
+        image={"https://misc.framerstatic.com/legacy/docs/logo.jpg"}
         radius={4}
       />
     </Frame>
@@ -493,7 +493,7 @@ The image `Frame` will be set to `center` and have a scale of 25%. It will also 
     scale={0.25}
     center
     size={480}
-    image={"https://misc.framerstatic.com/api/bg.jpg"}
+    image={"https://misc.framerstatic.com/legacy/docs/bg.jpg"}
   />
   <Slider />
 </Frame>
@@ -821,7 +821,7 @@ Below are completed tutorial files which may be helpful if you ran into any issu
 
 <Button
   name="Framer Completed Tutorial"
-  link="https://misc.framerstatic.com/api/tutorial-complete.framerx"
+  link="https://misc.framerstatic.com/legacy/docs/tutorial-complete.framerx"
 />
 </div>
 <div>
@@ -860,10 +860,10 @@ If you’ve extended the tutorial and want us to share what you’ve created, po
 
 During this tutorial we touched on quite a few different features in Framer and React. Here’s a collection of resources for you to explore to learn more.
 
-- [**Framer:** Drag Properties & Events](/api/frame/#drag)
-- [**Framer:** MotionValue](</api/animation/#(motionvalue:class)>)
-- [**Framer:** useMotionValue()](/api/animation/#usemotionvalue)
-- [**Framer:** useTransform()](/api/animation/#usetransform)
+- [**Framer:** Drag Properties & Events](/legacy/docs/frame/#drag)
+- [**Framer:** MotionValue](</legacy/docs/animation/#(motionvalue:class)>)
+- [**Framer:** useMotionValue()](/legacy/docs/animation/#usemotionvalue)
+- [**Framer:** useTransform()](/legacy/docs/animation/#usetransform)
 - [**React:** Hooks ›](https://reactjs.org/docs/hooks-overview.html)
 - [**React:** Components and Props ›](https://reactjs.org/docs/components-and-props.html)
 - [**React:** Using Import ›](https://reactjs.org/docs/code-splitting.html#import)
@@ -873,4 +873,4 @@ During this tutorial we touched on quite a few different features in Framer and 
 
 ### Additional Examples
 
-If you’d like to see some more examples on animation, gestures, dragging, paging, scrolling and more [visit our examples](/api/examples/) section for detailed explanations and code samples.
+If you’d like to see some more examples on animation, gestures, dragging, paging, scrolling and more [visit our examples](/legacy/docs/examples/) section for detailed explanations and code samples.
